--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18",
