--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NEXTAUTH_SECRET="SuperSecretKeyForNextAuth123!ChangeMe"
 NEXT_PUBLIC_API_URL="https://apl-back-educablog-1.onrender.com"
+NEXT_PUBLIC_POSTS_LIMIT=10
