--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXTAUTH_SECRET="SuperSecretKeyForNextAuth123!ChangeMe"
+NEXT_PUBLIC_SITE_URL="https://educablog-web.vercel.app/"
 NEXT_PUBLIC_API_URL="https://apl-back-educablog-1.onrender.com"
 NEXT_PUBLIC_POSTS_LIMIT=10
+NEXT_PUBLIC_DISQUS_NAME="educablog-1"
