--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "disqus-react": "^1.1.5",
+    "dompurify": "^3.1.6",
     "jwt-decode": "^4.0.0",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
