--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.1.0",
+    "@ckeditor/ckeditor5-react": "^9.2.0",
     "axios": "^1.7.7",
     "disqus-react": "^1.1.5",
     "dompurify": "^3.1.6",
@@ -18,7 +20,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-quill": "^2.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
